[package]
name = "foreman"
version = "0.1.0"
authors = ["ahoetker <ahoetker@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
glob = "0.3.0"
lazy_static = "1.3.0"
reqwest = "0.9.19"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
